--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
+sudo: false
+
 langurage: python
 
-install:
-  - pip install -r requirements.txt
-
 script:
-  - pytest
+  - py.test test_sapmle.py
