--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,17 @@ sudo: false
 
 langurage: python
 
+matrix:
+  - python: 3.7
+    dist: xenial
+    os: linux
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+        packages:
+          - gcc-7
+          - g++-7
+
 script:
   - py.test test_sample.py
