--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,10 @@ matrix:
         packages:
           - gcc-7
 
-install:
-  - pip install pytest
-
+before_install:
+  - conda env create -f environment.yml;
+    source activate MY_ENV;
+    conda list;
+    
 script:
   - py.test test_sample.py
