--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ matrix:
           - gcc-7
 
 before_install:
-  - conda env create -f environment.yml;
-    source activate MY_ENV;
-    conda list;
+  - conda env create -f environment.yml
+  - conda activate MY_ENV
+  - conda list
     
 script:
   - py.test test_sample.py
